packages/yew-macro/tests/hook_macro/use_prepared_state-fail.stderr
error: this hook takes 2 arguments but 1 argument was supplied
 --> tests/hook_macro/use_prepared_state-fail.rs:6:5
  |
6 |     use_prepared_state_with_closure!(123)?;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `use_prepared_state_with_closure` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You must specify a return type for this closure. This is used when the closure is omitted from the client side rendering bundle.
 --> tests/hook_macro/use_prepared_state-fail.rs:8:43
  |
8 |     use_prepared_state_with_closure!(123, |_| { todo!() })?;
  |                                           ^^^^^^^^^^^^^^^

error: this hook takes 2 arguments but 1 argument was supplied
  --> tests/hook_macro/use_prepared_state-fail.rs:10:5
   |
10 |     use_prepared_state_with_closure!(|_| -> u32 { todo!() })?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `use_prepared_state_with_closure` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected closure
  --> tests/hook_macro/use_prepared_state-fail.rs:12:62
   |
12 |     use_prepared_state_with_closure!(|_| -> u32 { todo!() }, 123)?;
   |                                                              ^^^

error: this hook takes 2 arguments but 1 argument was supplied
  --> tests/hook_macro/use_prepared_state-fail.rs:14:5
   |
14 |     use_prepared_state_with_closure!(async |_| -> u32 { todo!() })?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `use_prepared_state_with_closure` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected closure
  --> tests/hook_macro/use_prepared_state-fail.rs:16:55
   |
16 |     use_prepared_state_with_closure!(|_| { todo!() }, 123)?;
   |                                                       ^^^

error: this hook takes 2 arguments but 1 argument was supplied
  --> tests/hook_macro/use_prepared_state-fail.rs:23:5
   |
23 |     use_prepared_state_without_closure!(123)?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `use_prepared_state_without_closure` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You must specify a return type for this closure. This is used when the closure is omitted from the client side rendering bundle.
  --> tests/hook_macro/use_prepared_state-fail.rs:25:46
   |
25 |     use_prepared_state_without_closure!(123, |_| { todo!() })?;
   |                                              ^^^^^^^^^^^^^^^

error: expected closure
  --> tests/hook_macro/use_prepared_state-fail.rs:27:58
   |
27 |     use_prepared_state_without_closure!(|_| { todo!() }, 123)?;
   |                                                          ^^^

error: this hook takes 2 arguments but 1 argument was supplied
  --> tests/hook_macro/use_prepared_state-fail.rs:29:5
   |
29 |     use_prepared_state_without_closure!(|_| -> u32 { todo!() })?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `use_prepared_state_without_closure` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected closure
  --> tests/hook_macro/use_prepared_state-fail.rs:31:65
   |
31 |     use_prepared_state_without_closure!(|_| -> u32 { todo!() }, 123)?;
   |                                                                 ^^^

error: this hook takes 2 arguments but 1 argument was supplied
  --> tests/hook_macro/use_prepared_state-fail.rs:33:5
   |
33 |     use_prepared_state_without_closure!(async |_| -> u32 { todo!() })?;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `use_prepared_state_without_closure` (in Nightly builds, run with -Z macro-backtrace for more info)
